--- a/src/style/views.scss
+++ b/src/style/views.scss
@@ -1,1 +1,6 @@
-@import "../view/Home/home.styles.scss"
+@import "../view/Home/home.styles.scss";
+@import "../view/Contact/contact.style.scss";
+@import "../view/WhoWeAre/whoweare.style.scss";
+@import "../view/Service/service.style.scss";
+@import "../view/News/news.style.scss";
+@import "../view/Blogs/blog.style.scss";
