--- a/src/view/Home/home.styles.scss
+++ b/src/view/Home/home.styles.scss
@@ -1,19 +1,56 @@
-.home_component{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content: center;
-    width:100%;
-    height: 100vh;
-    background-color: antiquewhite;
-    label{
-        color: red;
+.home-hero{
+    width: 100%;
+    height: 60vh;
+    position: relative;
+    display: flex;
+    #background{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-image: url("../../assets/images/undraw_team_spirit_hrr4.svg");
+        background-position: right;
+        background-repeat: no-repeat;
+        background-size: contain;
+        opacity: 0.4;
+        z-index: 0;
+        top: 0;
     }
-    button {
-        width: 20%;
-        height: 10%;
-        margin-top:20px;
-        color: white;
-        background-color: black;
+    #banner{
+        position: absolute;
+        bottom: -15px;
+        left: 10%;
+        height: 80px;
+        z-index: 1;
+    }
+    .home-hero-text{
+        height: 100%;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        justify-content: center;
+        z-index: 1;
+        h4{
+            font-family: "chainprinter", sans-serif;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 14px;
+            letter-spacing: 2px;
+            color: #333;
+        }
+        h1{
+            margin-top: 16px;
+            color: #333;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 60px;
+            line-height: 64px;
+            span{
+                color: #CDA21F
+            }
+        }
+        .btn{
+            margin-top: 16px;
+        }
     }
 }
