--- a/src/style/components/error.scss
+++ b/src/style/components/error.scss
@@ -1,18 +1,15 @@
 .errors-holder{
-    position: absolute;
     width:30%;
-    top: 170px;
+    top: 165px;
     width: 100%;
     display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
     .error{
-        width: 20%;
-        display: flex;
+        width: 100%;
+        text-align: center; 
         padding: 20px;
         background-color: $error;
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
         color: #fff;
     }
 }
