--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -17,3 +17,6 @@
 @import "./components/team_profile.scss";
 @import "./components/loading.scss";
 @import "./components/error.scss";
+@import "./components/header.scss";
+@import "./components/upcoming.scss";
+@import "./components/mobilemenu.scss";
