--- a/src/style/views.scss
+++ b/src/style/views.scss
@@ -4,3 +4,4 @@
 @import "../view/Service/service.style.scss";
 @import "../view/News/news.style.scss";
 @import "../view/Blogs/blog.style.scss";
+@import "../view/Page404/page404.style.scss";
