--- a/src/view/Service/service.style.scss
+++ b/src/view/Service/service.style.scss
@@ -26,4 +26,7 @@
     align-items: center;
     justify-content: center;
     padding: 40px 0;
+    @media (max-width: $small){
+        flex-direction: column;
+    }
 }
