--- a/src/style/components/blog_card.scss
+++ b/src/style/components/blog_card.scss
@@ -9,6 +9,9 @@
     margin: 10px;
     border-radius: 10px;
     transition: transform .5s ease-in-out;
+    @media (max-width: $small){
+        width: 100%;
+    }
     .image-wrapper{
         width: 100%;
         position: relative;
