--- a/src/style/components/blog_profile.scss
+++ b/src/style/components/blog_profile.scss
@@ -85,6 +85,9 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            @media (max-width: $small){
+                width: 100%;
+            }
             input{
                 width: 100%;
                 margin-bottom: 16px;
