--- a/src/style/components/contact_banner.scss
+++ b/src/style/components/contact_banner.scss
@@ -8,6 +8,9 @@
     background-color: $primary;
     list-style-type: none;
     z-index: 999;
+    @media (max-width: $small){
+        flex-direction: column;
+    }
     i{
         display: flex;
         align-items: center;
@@ -33,5 +36,9 @@
     }
     i:nth-child(2){
         margin-left: 20px;
+        @media (max-width: $small){
+            margin-top: 8px;
+            margin-left: 0;
+        }
     }
 }
