--- a/src/style/components/error.scss
+++ b/src/style/components/error.scss
@@ -2,7 +2,7 @@
     width:30%;
     top: 165px;
     width: 100%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     .error{
@@ -10,6 +10,9 @@
         text-align: center; 
         padding: 20px;
         background-color: $error;
-        color: #fff;
+        color: #ac5d65;
     }
+}
+.active-error{
+    display: flex;
 }
