--- a/src/style/components/footer.scss
+++ b/src/style/components/footer.scss
@@ -8,12 +8,19 @@ footer{
         justify-content: space-between;
         align-items: flex-start;
         padding: 40px 15px 40px 15px;
+        @media (max-width: $small){
+            flex-direction: column-reverse;
+        }
     }
     .social-holder{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        @media (max-width: $small){
+            width: 100%;
+            margin-top: 16px;
+        };
         #logo{
             height: 88px;
         }
@@ -24,11 +31,24 @@ footer{
                     width: 29px;
                 }
             }
+            a:nth-child(1){
+                margin-left: 0;
+            }
         }
     }
     .addresses{
         list-style-type: none;
         width: 20%;
+        @media (max-width: $small){
+            width: 100%;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+        };
+        li{
+            white-space: nowrap;
+        }
         li:nth-child(1){
             margin-bottom: 16px;
         }
@@ -43,6 +63,9 @@ footer{
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
+        @media (max-width: $small){
+            display: none;
+        };
         a{
             text-transform: capitalize;
             color: $white;
@@ -72,6 +95,9 @@ footer{
         li:nth-child(1){
             margin-bottom: 16px;
         }
+        @media (max-width: $small){
+            display: none;
+        };
     }
     .who-we-are{
         display: flex;
@@ -79,6 +105,10 @@ footer{
         align-items: flex-start;
         justify-content: flex-start;
         width: 20%;
+        @media (max-width: $small){
+            width: 100%;
+            align-items: center;
+        };
         a{
             text-decoration: none;
             color: $white;
