--- a/src/style/components/loading.scss
+++ b/src/style/components/loading.scss
@@ -1,11 +1,14 @@
 .loading-overlay{
     position: absolute;
     width: 100%;
-    min-height: 65vh;
+    height: 100%;
     background-color: #fff;
-    user-select: none;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: 1030;
+    overflow-y: hidden;
+}
+.active-loader {
+    display: flex;
 }
