--- a/src/style/components/nav.scss
+++ b/src/style/components/nav.scss
@@ -16,6 +16,9 @@ nav{
         img{
             height: 100%;
         }
+        @media (max-width: $small){
+            height: 44px;
+        }
     }
     .nav-holder{
         width: 50%;
@@ -25,6 +28,9 @@ nav{
         justify-content: space-between;
         flex-direction: column;
         padding-left: 30px;
+        @media (max-width: $small){
+            display: none;
+        }
         .nav-wrapper{
             width: 100%;
             display: flex;
@@ -70,6 +76,12 @@ nav{
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
+            @media (max-width: $small){
+                display: none;
+            }
+            .active-link{
+                color: $primary;
+            }
             a{
                 color: $text-default;
                 padding: 10px;
@@ -105,9 +117,6 @@ nav{
                     transform: translateY(0);
                     opacity: 1;
                 }
-            }
-            @media (max-width: $small){
-                display: none;
             }
         }
 
@@ -155,11 +164,37 @@ nav{
                 background-color: $primary;
             }
           }
+        .wellcome{
+            padding: 10px;
+            text-decoration: none;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            color: #333;
+            p{
+                color: $primary;
+                padding-left: 5px;
+            }
+        }
+        .localization{
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            flex-direction: row;
+            img{
+                width: 35px;
+                margin-right: 10px;
+            }
+        }
     }
     .hamburger{
         display: none;
         width: 40px;
         height: 40px;
+        @media (max-width: $small){
+            display: block;
+        }
         img{
             width: 100%;
             height: 100%;
