--- a/src/style/components/news_card.scss
+++ b/src/style/components/news_card.scss
@@ -1,11 +1,14 @@
 .new-card{
-    width: 100%;
+    width: 49%;
+    @media (max-width: $small){
+        width: 100%
+    }
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
     border: 1px solid $primary;
-    height: 20rem;
+    min-height: 15rem;
     margin-top: 24px;
     border-radius: 10px;
     overflow: hidden;
@@ -17,15 +20,12 @@
         flex-direction: column;
         padding: 24px;
         background-color: #fff;
-        height: 100%;
         width: 100%;
-    }
-    .image-wrapper{
-        width: 30%;
-        height: 100%;
-        img{
-            width: 100%;
-            height: 100%;
+        h2{
+            margin-bottom: 10px;
+        }
+        p{
+            margin-bottom: 16px;
         }
     }
 }
