--- a/src/style/components/news_profile.scss
+++ b/src/style/components/news_profile.scss
@@ -6,15 +6,24 @@
     padding: 40px 0;
     flex-direction: column;
     padding-bottom: 150px;
-    .image-wrapper{
+    .new-profile-info{
         width: 100%;
-        height: 15rem;
-        overflow: hidden;
-        margin-bottom: 30px;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        h1{
+            margin: 24px;
+        }
+        p{
+            margin-bottom: 8px;
         }
     }
+}
+.new-image-holder  {
+    margin-bottom: 80px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
