--- a/src/style/components/service_profile.scss
+++ b/src/style/components/service_profile.scss
@@ -12,6 +12,11 @@ article{
         display: flex;
         padding: 40px;
         margin: 60px 0 150px 0;
+        @media (max-width: $small){
+            width: 100%;
+            margin-bottom: 60px;
+            padding: 40px 20px;
+        }
         h1{
             margin-bottom: 12px;
             color: $primary;
