--- a/src/style/components/team_profile.scss
+++ b/src/style/components/team_profile.scss
@@ -4,9 +4,16 @@
     justify-content: center;
     width: 100%;
     flex-direction: row;
+    @media (max-width: $small){
+        flex-direction: column;
+        padding: 40px 0;
+    }
     min-height: 70vh;
     .image-wrapper{
         width: 50%;
+        @media (max-width: $small){
+            width: 100%;
+        }
         position: relative;
         img{
             width: 100%;
@@ -18,6 +25,9 @@
             right: -30%;
             height: 150px;
             z-index: 1;
+            @media (max-width: $small){
+                height: 100px;
+            }
         }
     }
     .meet-me{
