--- a/src/view/News/news.style.scss
+++ b/src/view/News/news.style.scss
@@ -6,6 +6,24 @@
     position: relative;
     flex-direction: column;
     padding: 60px 0;
+    .upcoming-wrapper{
+        width: 100%;
+        .upcoming-event{
+            margin: 20px 0;
+            background-color: #fcfefc;
+            padding: 30px 0;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            p{
+                padding: 10px;
+                font-size: 24px;
+                font-family: chainprinter,sans-serif;
+            }
+        }   
+    }
     .news-background{
         width: 100%;
         height: 18rem;
@@ -30,7 +48,11 @@
         display: flex;
         width: 100%;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: space-between;
+        flex-direction: row;
         flex-wrap: wrap;
+        @media (max-width: $small){
+            flex-direction: column;
+        }
     }
 }
