--- a/src/style/components/news_profile.scss
+++ b/src/style/components/news_profile.scss
@@ -24,6 +24,14 @@
     margin-bottom: 80px;
     display: flex;
     width: 100%;
-    justify-content: center;
+    max-height: 300px;
+    justify-content: space-between;
     align-items: center;
+    flex-direction: row;
+    overflow-y: hidden;
+    overflow-x: auto;
+    .slide{
+        padding: 20px;
+        height: 100%;
+    }
 }
