--- a/src/view/News/news.style.scss
+++ b/src/view/News/news.style.scss
@@ -44,7 +44,7 @@
             font-weight: bold;
         }
     }
-    .news-list{
+    .infinite-scroll-component {
         display: flex;
         width: 100%;
         align-items: center;
