--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -20,3 +20,4 @@
 @import "./components/header.scss";
 @import "./components/upcoming.scss";
 @import "./components/mobilemenu.scss";
+@import "./components/userprofile.scss";
