--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -57,3 +57,17 @@ h1,h2,h3,h4{
 li{
     font-family: roboto-m;
 }
+.infinite-scroll-component__outerdiv{
+    width: 100%;
+    display: flex;
+    padding-bottom: 55px;
+    .infinite-scroll-component {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 30px
+    }
+}
