--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -21,3 +21,4 @@
 @import "./components/upcoming.scss";
 @import "./components/mobilemenu.scss";
 @import "./components/userprofile.scss";
+@import "./components/carousels.scss";
