--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -68,6 +68,9 @@ li{
         justify-content: space-between;
         flex-direction: row;
         flex-wrap: wrap;
-        padding: 30px
+        padding: 30px;
+        @media (max-width: $small){
+            padding: 0;
+        }
     }
 }
