--- a/src/view/Contact/contact.style.scss
+++ b/src/view/Contact/contact.style.scss
@@ -24,12 +24,21 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        @media (max-width: $small){
+            flex-direction: column-reverse;
+            padding: 10px;
+            padding-bottom: 75px;
+            padding-top: 30px;
+        }
         form{
             display: flex;
             align-items: flex-start;
             justify-content: center;
             flex-direction: column;
             width: 40%;
+            @media (max-width: $small){
+                width: 100%;
+            }
             label{
                 display: flex;
                 width: 100%;
@@ -63,14 +72,16 @@
                 margin-top: 16px;
                 z-index: 3;
             }
-        }
-        
+        }    
         .social-maps{
             width: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            @media (max-width: $small){
+                width: 100%;
+            }
             .google-map{
                 width: 100%;
                 height: 400px;
